# On-chain-event-indexer

./: .dockerignore  .env  .gitignore  Cargo.toml  DataBaseInfo.md  Dockerfile  README.md  Task.md  database_schema.md  database_schema_t.md  docker-compose.yaml  requests.rs  response.txt  response123.json  response2.json  response_error.json  response_parsed.json
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
.sqlx/: query-2d09de0c9c84fdccfd85587c2f98764ce1d329a34566a5e48fd8dd4442ecec72.json  query-745ab46bca81d07bc5daa86ed4b84fc5545c7b6d555cb99e387323b08c06d2d9.json  query-90643a6906595e951eff3a3dc7d461b3c7a8f8f92058d9cb2948310d5d67ea18.json  query-c11d035281cf686d494c586eea8850e660f7d59e9f30dbecfefa1fd41c2779fe.json
config/: default.toml
frontend/: index.html  script.js  style.css
frontend/css/: forms.css  layout.css  main-area.css  modal.css  sidebar.css  variables.css
frontend/js/: api.js  state.js  utils.js
info/: NEXT.md  PLAN_MVP_14DAYS.md
migrations/: 20240428000000_create_initial_schema.sql  20260505142800_remove_the_uniqueness_of_the_address.sql  20260506163300_signatures_composite_pk.sql  20260511060000_add_token_transfers_natural_unique_index.sql
sql/: update_indexes.sql
src/: api.rs  backoff.rs  charts.rs  database.rs  db.rs  frontend.rs  indexer.rs  lib.rs  logging.rs  main.rs  requests.rs  server.rs  settings.rs  telemetry.rs  types.rs
src/db/: jobs.rs  signatures.rs  transactions.rs
src/requests/: client.rs  error.rs  http.rs  jsonrpc.rs  signatures.rs  signatures_types.rs  token_transfers.rs  transaction_types.rs  transactions.rs  types.rs
tests/: db.rs  helius_api_signatures.rs  helius_api_transactions.rs
(+15 files in other folders)
