[package]
name = "on_chain_event_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48" }
reqwest = { version = "0.12.26" }
serde = { version = "1.0.228 " }
serde_json = { version = "1.0.145" }
anyhow = { version = "1.0.100" }
tracing = { version = "0.1.44" }
tracing-subscriber = "0.3.22"
solana-client = "3.1.5"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.5"
solana-account-decoder = "3.1.5"
