[package]
name = "on_chain_event_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.148"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
tracing-appender = "0.2"
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.0"
solana-account-decoder = "3.0.0"
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
dotenvy = "0.15.7"
chrono = { version = "0.4.42", features = ["serde"] }
backon = { version = "1.6.0", features = ["tokio"] }
governor = "0.10.4"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "bigdecimal",
] }
bigdecimal = "0.4"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
colored = { version = "3.0.0" }
futures = "0.3.31"
axum = "0.8" 
tower-http = { version = "0.6.8", features = ["cors"] }

[[bin]]
name = "test"
path = "src/test.rs"
